--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -1,7 +1,27 @@
 ---
 title: "How To Install Ghost With Docker (preview)"
-description: Preview our new batteries-included tools for self-hosting Ghost using Docker.
+description: Preview our new batteries-included tools for self-hosting Ghost using Docker compose.
 ---
+
+With the launch of Ghost 6.0 we are also previewing a new suite of tooling for self-hosters built on Docker with compose.
+We invite you to be one of the first to try hosting Ghost with this new tooling, which comes with full support for self-hosting
+both the Social Web (ActivityPub) and Analytics (Tinybird) features.
+
+#### Why docker?
+
+Our latest and greatest features are full-fat implementations, that made sense to build as completely separate services to Ghost
+itself. Using Docker and Docker compose takes all the pain out of orchestrating these different services and their dependencies.
+
+## New Installs
+
+## Updating
+
+## Migrating a Ghost-CLI Install
+
+## Tinybird Integration
+
+
+
 
 ***
 
