--- a/content-api.mdx
+++ b/content-api.mdx
@@ -32,7 +32,13 @@ Content API keys are provided via a query parameter in the URL. These keys are s
 Obtain the Content API URL and key by creating a new `Custom Integration` under the **Integrations** screen in Ghost Admin.
 
 <Frame>
-  <img src="/images/d3673af2-apikey_huc23d3a1fbe859434094a9db94f574d9a_265920_2920x0_resize_q100_h2_box_3.webp" />
+  <img src="/images/custom-integrations-list.png" />
+</Frame>
+
+<br />
+
+<Frame>
+  <img src="/images/custom-integration-settings.png" />
 </Frame>
 
 ### Accept-Version Header
