--- a/members.mdx
+++ b/members.mdx
@@ -62,7 +62,15 @@ Members in Ghost can be free members, or become paid members with a direct Strip
 We’ve built a direct [integration with Stripe](https://ghost.org/integrations/stripe/) which allows publishers to connect their Ghost site to their own billing account using Stripe Connect.
 
 <Frame>
-  <img src="/images/80b52af3-connect-to-stripe_hu44a97624d38f04e23e06510778716a3f_39290_1906x0_resize_q100_h2_box_3.webp" />
+  <img src="/images/stripe-step-1.png" />
+</Frame>
+<br />
+<Frame>
+  <img src="/images/stripe-step-2.png" />
+</Frame>
+<br />
+<Frame>
+  <img src="/images/stripe-step-3.png" />
 </Frame>
 
 Payments are handled by Stripe and billing information is stored securely inside your own Stripe account.
