Fixed a typo in ubuntu install docs
- Noticed this whilst mirroring structure and tone across docs

--- a/install/ubuntu.mdx
+++ b/install/ubuntu.mdx
@@ -23,7 +23,7 @@ The officially recommended production installation requires the following stack:
 - A server with at least 1GB memory
 - A registered domain name
 
-Before getting started you should set up a working DNS **A-Record** from you domain, pointing to the server’s IP address. This must be done in advance so that SSL can be configured during setup.
+Before getting started you should set up a working DNS **A-Record** from your domain, pointing to the server’s IP address. This must be done in advance so that SSL can be configured during setup.
 
 ---
 
