--- a/install/local.mdx
+++ b/install/local.mdx
@@ -20,6 +20,7 @@ To install Ghost locally you will need the following:
 * A computer running MacOS, Windows or Linux
 * A [supported version](/faq/node-versions/) of [Node.js](https://nodejs.org)
 * Either [yarn](https://yarnpkg.com/en/docs/install#alternatives-tab) or [npm](https://www.npmjs.com/get-npm) to manage packages
+* [Python 3 and setuptools](/faq/python-setuptools-required-sqlite3) for building SQLite3
 * A clean, empty directory on your machine
 
 ***
