Removed duplicated (preview) on install
- this being there twice is ugly overkill

--- a/install.mdx
+++ b/install.mdx
@@ -26,7 +26,7 @@ import { LocalInstallLogo } from '/snippets/local.jsx'
     href="/install/docker/"
     icon={<DockerLogo />}
   >
-    Docker compose (preview)
+    Docker compose
   </Card>
   <Card
     title="Local install"
