Fixed some dark mode styles and image zoom issues

--- a/index.mdx
+++ b/index.mdx
@@ -20,20 +20,20 @@ description: Learn how to build and develop beautiful, independent publications
 <br />
 <p>Follow our setup guides for any platform, from local development to production environments.</p>
 <br />
-<a href="install/" className='p-2 border rounded-md bg-black text-white'>Get Started →</a>
+<a href="install/" className='p-2 rounded-md bg-primary text-primary-light border border-primary dark:border-primary-light dark:bg-primary-light dark:text-primary-dark'>Get Started →</a>
 <br />
 <br />
 <div className='flex gap-3'>
-<a href="https://ghost.org/pricing/" className='p-2 border rounded-md bg-[#e5eaf0] text-[#959698] text-xs'>
+<a href="https://ghost.org/pricing/" className='p-2 border rounded-md dark:text-primary-light text-xs'>
 Ghost(Pro)
 </a>
-<a href="install/ubuntu/" className='p-2 border rounded-md bg-[#e5eaf0] text-[#959698] text-xs'>
+<a href="install/ubuntu/" className='p-2 border rounded-md dark:text-primary-light text-xs'>
 Ubuntu
 </a>
-<a href="install/local/" className='p-2 border rounded-md bg-[#e5eaf0] text-[#959698] text-xs'>
+<a href="install/local/" className='p-2 border rounded-md dark:text-primary-light text-xs'>
 Local
 </a>
-<a href="install/docker/" className='p-2 border rounded-md bg-[#e5eaf0] text-[#959698] text-xs'>
+<a href="install/docker/" className='p-2 border rounded-md dark:text-primary-light text-xs'>
 Docker
 </a>
 </div>
