--- a/logos.mdx
+++ b/logos.mdx
@@ -6,7 +6,7 @@ description: The Ghost brand is our pride and joy. We’ve gone to great lengths
 ***
 
 <Frame>
-  <div className='dark:bg-white/70 w-full flex items-center justify-center'>
+  <div className='dark:bg-white w-full flex items-center justify-center'>
     <img src="/images/ed2eeb2c-ghost-logo-dark.png" alt='Dark Ghost logo' />
   </div>
 </Frame>
@@ -15,7 +15,7 @@ description: The Ghost brand is our pride and joy. We’ve gone to great lengths
 </div>
 
 <Frame>
-  <div className='dark:bg-white/70 w-full flex items-center justify-center'>
+  <div className='dark:bg-white w-full flex items-center justify-center'>
     <img src="/images/74e0ffae-ghost-logo-orb.png" alt='Ghost orb logo' />
   </div>
 </Frame>
