--- a/themes/contexts.mdx
+++ b/themes/contexts.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Contexts"
+sidebarTitle: "Overview"
 description: Each page in a Ghost theme belongs to a context, which determines which template is used, what data will be available and what content is output by the `{{body_class}}` helper.
 ---
 
