more updates to images and make them webp

--- a/content-api.mdx
+++ b/content-api.mdx
@@ -31,14 +31,14 @@ Content API keys are provided via a query parameter in the URL. These keys are s
 
 Obtain the Content API URL and key by creating a new `Custom Integration` under the **Integrations** screen in Ghost Admin.
 
-<Frame>
-  <img src="/images/custom-integrations-list.png" />
+<Frame caption={`Search "integrations" in your settings to jump right to the section.`}>
+  <img src="/images/custom-integrations-list.webp" />
 </Frame>
 
 <br />
 
-<Frame>
-  <img src="/images/custom-integration-settings.png" />
+<Frame caption="You can regenerate the Content API key any time, but any scripts or applications using it will need to be updated.">
+  <img src="/images/custom-integration-settings.webp" />
 </Frame>
 
 ### Accept-Version Header
