--- a/members.mdx
+++ b/members.mdx
@@ -61,16 +61,16 @@ Members in Ghost can be free members, or become paid members with a direct Strip
 
 We’ve built a direct [integration with Stripe](https://ghost.org/integrations/stripe/) which allows publishers to connect their Ghost site to their own billing account using Stripe Connect.
 
-<Frame>
-  <img src="/images/stripe-step-1.png" />
+<Frame caption={`Search "Tiers" or "Stripe" in your settings to find the Connect to Stripe button.`}>
+  <img src="/images/stripe-step-1.webp" />
 </Frame>
 <br />
-<Frame>
-  <img src="/images/stripe-step-2.png" />
+<Frame caption="Make sure you're signed up for a Stripe account.">
+  <img src="/images/stripe-step-2.webp" />
 </Frame>
 <br />
-<Frame>
-  <img src="/images/stripe-step-3.png" />
+<Frame caption="Follow the instructions to connect your Stripe account and generate your secure key.">
+  <img src="/images/stripe-step-3.webp" />
 </Frame>
 
 Payments are handled by Stripe and billing information is stored securely inside your own Stripe account.
