--- a/newsletters.mdx
+++ b/newsletters.mdx
@@ -27,7 +27,7 @@ Self-hosted Ghost installs can configure bulk email by entering Mailgun API keys
 Delivering bulk email newsletters can’t be done with basic SMTP. A bulk mail provider is a requirement to reliably deliver bulk mail. At present, Mailgun is the only supported bulk email provider. Mailgun is free for up to 600 emails per month, and has very reasonable pricing beyond that. [More info here](/faq/mailgun-newsletters/)
 
 <Frame>
-  <img src="/images/mailgun-form.png" />
+  <img src="/images/mailgun-form.webp" />
 </Frame>
 
 ### Auth email
