--- a/admin-api/webhooks/updating-a-webhook.mdx
+++ b/admin-api/webhooks/updating-a-webhook.mdx
@@ -35,7 +35,7 @@ All writable fields of a webhook can be updated via edit endpoint. These are fol
             "target_url": "https://example.com/hook/",
             "name": "webhook example",
             "secret": null,
-            "api_version": "v",
+            "api_version": "v6",
             "integration_id": "5c739b7c8a59a6c8ddc164a1",
             "status": "available",
             "last_triggered_at": null,
