--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -16,7 +16,7 @@ Using Docker and Docker compose takes all the pain out of managing different ser
 without passing on complexity to our self-hosting community. All services are Open Source and can be self-hosted.
 
 ## Pre-requisites
-- A Linux-based server with Docker installed (we recommend )
+- A Linux-based server with Docker installed (E.g. DigitalOcean 2GB/1CPU droplet)
 - A domain name with a DNS **A-Record** pointing to the server’s IP address
 - An SMTP email service for transactional mail (See: [email config docs](/config/#mail))
 - (Optional) A [Tinybird](https://www.tinybird.co/) account for web analytics
@@ -117,11 +117,11 @@ Deploy your tinybird configuration. This will create your Tinybird datasources, 
 docker compose run --rm tinybird-login get-tokens
 ```
 
-Get your tinybird tokens
+Get your tinybird tokens and configuration and copy them ready for the next step...
 
 ### Edit the .env file
 
-Copy and paste the values from the previous step into the "Tinybird configuration" section.
+Paste the values from the previous step into the "Tinybird configuration" section.
 
 Add `analytics` to the `COMPOSE_PROFILES` variable at the top. This automatically includes the `analytics` profile when running `docker compose` commands:
 
@@ -148,7 +148,7 @@ Verify it's working by visiting your homepage and then checking the visit appear
 ## Enabling Social Web (ActivityPub)
 
 By default, all new Ghost installs are configured to use the Ghost(Pro) hosted ActivityPub Service, meaning the Social Web features work out of the box.
-This hosted service is free to use for all self-hosters, with some [usage limits]()
+This hosted service is free to use for all self-hosters, with some [usage limits](/install/docker#hosted-activitypub-usage-limits).
 
 If you would like to host the ActivityPub Service yourself, follow these steps:
 
@@ -228,7 +228,7 @@ TK
 
 If this setup doesn't "just work" out of the box, there's likely a configuration error or server incompatibility issue that needs tracking down.
 
-Use `docker compose logs caddy` to see the webserver logs. Definitely try this first if you get an error like "This site can't be reached".
+Use `docker compose logs caddy` to see the webserver logs. Try this first if you get an error like "This site can't be reached".
 
 Use `docker compose logs ghost` to see the Ghost logs as the next step.
 
